hphp/test/zend/good/ext/session/tests/session_set_save_handler_class_004.php
<?php

ob_start();

/* 
 * Prototype : bool session_set_save_handler(SessionHandler $handler [, bool $register_shutdown_function = true])
 * Description : Sets user-level session storage functions
 * Source code : ext/session/session.c 
 */

echo "*** Testing session_set_save_handler() : default object ***\n";

session_set_save_handler(new SessionHandler);
session_start();

$_SESSION['foo'] = "hello";

var_dump(session_id(), ini_get('session.save_handler'), $_SESSION);

session_write_close();
session_unset();
session_start();

var_dump($_SESSION);

session_write_close();
session_unset();
